@@ -5,6 +5,7 @@ Version 3.6.0
 - [MINOR] Increase visibility of internal SSOStateSerializer for OneAuth usage (integration steps available at aka.ms/AAd2vt8) (#1448, #1509)
 - [MINOR] Add a method to allow for the setting of Fragment initial state (#1506, #1512)
 - [MINOR] Adds ContentProvider Constants used for Intune ContentProvider call (#1513, #1657)
+- [PATCH] Clear asymmetric pop key on KeyPermanentlyInvalidatedException if occurs during signing (#1505, #)
 
 Version 3.5.0
 ----------
